<resources>

    <string name="app_name">Time Lapse Render</string>
    <string name="title_activity_main">TimeLapse</string>
    <string name="admob_publisher_id">a150adc5d8c00ab</string>
    <string name="couldnt_rate">Could not rate this app</string>
    <string name="startButtonText">Start capture</string>
    <string name="createButtonText">Create video</string>
    <string name="periodText">Snapshots period</string>
    <string name="framerateText">Frame rate</string>
    <string name="seconds">sec</string>
    <string name="fps">fps</string>
    <string name="totalsnapshotsText">Total snapshots: 0</string>
    <string name="modeText">Work mode: ready to start</string>
    <string name="longestComment">+ Work mode: /sdcard/TimeLapseFolder/TimeLapseMovie.avi is rendered +</string>

</resources>